# practice-8

./: README.md
practice-8.1/mathlib/: Makefile  meson.build
practice-8.1/mathlib/include/: mathlib.h  matrix.h  vector.h
practice-8.1/mathlib/src/: basic.c  main.c  matrix.c  vector.c
practice-8.1/mathlib/tests/: test_mathlib.c
practice-8.2/strlib/: Makefile
practice-8.2/strlib/include/: strlib.h
practice-8.2/strlib/src/: main.c  strlib_core.c  strlib_format.c  strlib_search.c
practice-8.2/strlib/tests/: test_strlib.c
practice-8.3/fileutils/: Makefile  meson.build
practice-8.3/fileutils/include/: fileutils.h  io.h  path.h
practice-8.3/fileutils/src/: io.c  main.c  path.c
practice-8.4/httplib/: Makefile  meson.build
practice-8.4/httplib/include/: http.h  http_request.h  http_response.h
practice-8.4/httplib/src/: http_request.c  http_response.c  main.c
practice-8.5/: Makefile  meson.build
practice-8.5/include/: minitest.h
practice-8.5/src/: main.c  minitest.c
practice-8.5/tests/: test_example.c
